--- a/ProiectFis2-master/src/main/resources/com/example/proiectfis2/hello-view.fxml
+++ b/ProiectFis2-master/src/main/resources/com/example/proiectfis2/hello-view.fxml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proiectfis2.HelloController">
-  <TextField fx:id="usernameField" layoutX="14.0" layoutY="14.0" promptText="Username" />
-  <TextField fx:id="passwordField" layoutX="14.0" layoutY="54.0" promptText="Password" />
-  <Button fx:id="loginButton" layoutX="14.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
+<AnchorPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proiectfis2.HelloController">
+  <TextField fx:id="usernameField" layoutX="677.0" layoutY="62.0" prefHeight="34.0" prefWidth="157.0" promptText="Username" />
+  <TextField fx:id="passwordField" layoutX="677.0" layoutY="110.0" prefHeight="34.0" prefWidth="157.0" promptText="Password" />
+  <Button fx:id="loginButton" layoutX="677.0" layoutY="160.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="42.0" prefWidth="157.0" text="Login" />
 
   <!-- Spaced out buttons -->
-  <Button fx:id="addButton" layoutX="14.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleAddProduct" text="Add Product" />
-  <Button fx:id="addPromoButton" layoutX="14.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleAddPromotion" text="Add Promotion" />
-  <Button fx:id="removePromoButton" layoutX="14.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleRemovePromotion" text="Delete Promotion" />
-  <Button fx:id="addToCartButton" layoutX="14.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleAddToCart" text="Add to cart" />
-  <Button fx:id="removeFromCartButton" layoutX="14.0" layoutY="344.0" mnemonicParsing="false" onAction="#handleRemoveFromCart" text="Delete From Cart" />
-  <Button fx:id="placeOrderButton" layoutX="14.0" layoutY="394.0" mnemonicParsing="false" onAction="#handlePlaceOrder" text="Order" />
-  <Button fx:id="addEmployeeButton" layoutX="14.0" layoutY="494.0" mnemonicParsing="false" onAction="#handleAddEmployee" text="Add New User" />
-  <Button fx:id="viewEmployeesButton" layoutX="14.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleViewEmployees" text="All Users" />
-  <Button fx:id="removeProductButton" layoutX="14.0" layoutY="594.0" mnemonicParsing="false" onAction="#handleRemoveProduct" text="Remove Product" />
-  <Button fx:id="changeStatusButton" layoutX="14.0" layoutY="644.0" mnemonicParsing="false" onAction="#handleOrderStatusChange" text="Change Status" />
-  <Label layoutX="517.0" layoutY="-1.0" text="Produse" />
-  <ListView fx:id="productList" layoutX="230.0" layoutY="20.0" prefHeight="349.0" prefWidth="635.0" />
+  <Button fx:id="addButton" layoutX="677.0" layoutY="362.0" mnemonicParsing="false" onAction="#handleAddProduct" prefHeight="42.0" prefWidth="157.0" text="Add Product" />
+  <Button fx:id="addPromoButton" layoutX="174.0" layoutY="751.0" mnemonicParsing="false" onAction="#handleAddPromotion" text="Add Promotion" />
+  <Button fx:id="removePromoButton" layoutX="14.0" layoutY="751.0" mnemonicParsing="false" onAction="#handleRemovePromotion" prefHeight="42.0" prefWidth="139.0" text="Delete Promotion" />
+  <Button fx:id="addToCartButton" layoutX="677.0" layoutY="481.0" mnemonicParsing="false" onAction="#handleAddToCart" prefHeight="42.0" prefWidth="157.0" text="Add to cart" />
+  <Button fx:id="removeFromCartButton" layoutX="677.0" layoutY="542.0" mnemonicParsing="false" onAction="#handleRemoveFromCart" prefHeight="42.0" prefWidth="157.0" text="Delete From Cart" />
+  <Button fx:id="placeOrderButton" layoutX="677.0" layoutY="657.0" mnemonicParsing="false" onAction="#handlePlaceOrder" prefHeight="42.0" prefWidth="157.0" text="Order" />
+  <Button fx:id="addEmployeeButton" layoutX="677.0" layoutY="245.0" mnemonicParsing="false" onAction="#handleAddEmployee" prefHeight="42.0" prefWidth="157.0" text="Add New User" />
+  <Button fx:id="viewEmployeesButton" layoutX="677.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleViewEmployees" prefHeight="42.0" prefWidth="157.0" text="All Users" />
+  <Button fx:id="removeProductButton" layoutX="677.0" layoutY="422.0" mnemonicParsing="false" onAction="#handleRemoveProduct" prefHeight="42.0" prefWidth="157.0" text="Remove Product" />
+  <Button fx:id="changeStatusButton" layoutX="677.0" layoutY="730.0" mnemonicParsing="false" onAction="#handleOrderStatusChange" prefHeight="42.0" prefWidth="157.0" text="Change Status" />
+  <Label layoutX="314.0" layoutY="22.0" text="Produse" />
+  <ListView fx:id="productList" layoutX="27.0" layoutY="62.0" prefHeight="349.0" prefWidth="635.0" />
 
-  <Label layoutX="667.0" layoutY="372.0" text="Cos cumparaturi" />
-  <ListView fx:id="cartList" layoutX="594.0" layoutY="401.0" prefHeight="300.0" prefWidth="270.0" />
+  <Label layoutX="418.0" layoutY="436.0" text="Cos cumparaturi" />
+  <ListView fx:id="cartList" layoutX="345.0" layoutY="472.0" prefHeight="300.0" prefWidth="270.0" />
 
-  <Label layoutX="330.0" layoutY="372.0" text="Comenzi date" />
-  <ListView fx:id="orderList" layoutX="234.0" layoutY="401.0" prefHeight="300.0" prefWidth="269.0" />
+  <Label layoutX="110.0" layoutY="436.0" text="Comenzi date" />
+  <ListView fx:id="orderList" layoutX="27.0" layoutY="472.0" prefHeight="300.0" prefWidth="269.0" />
 </AnchorPane>
